Added a week-ending braindump

--- a/weeknotes/03_05_2024.md
+++ b/weeknotes/03_05_2024.md
@@ -1,3 +1,28 @@
-[Machine learning techniques to characterize functional traits of plankton from image data](https://aslopubs.onlinelibrary.wiley.com/doi/full/10.1002/lno.12101)
+# UKCEH RSE Group Weeknotes - 03-05-2024
+
+(Jo writing) I've often wanted to try [doing weeknotes](https://www.doingweeknotes.com/) and this is a trial of writing them for the new Research Software Engineering team forming at the UK Centre for Ecology and Hydrology.
+
+The guidelines suggest spending no more than half an hour writing your end-of-week notes, and I've already spent 10 minutes of that drafting a proposed abstract for a short talk at RSECon 2024. It's topical enough to include here, though:
+
+## A new RSE Group - the first 100 days
+ 
+_At UKCEH we are in the process of putting together a new RSE group, starting with 6 engineers with a range of backgrounds and interests. This talk describes what we've experienced in the first 100 days - finding research collaborators, making ourselves and our services known to the organisation, building up a programme of workshops; encouraging a culture shift while adapting to a new culture ourselves. How have we succeeded? What do we wish we'd known when writing this abstract?_
+
+It would be wonderful for the new group all to have the chance to gather at this conference, the globally largest gathering of the Research Software Engineering community. We'll be spread across three of the four sites that UKCEH runs from, and gathering in person always makes things easier.
+
+Most of the Environmental Data Science team that surrounds us are based in Lancaster, I'm personally in Edinburgh. There are benefits to being here, in the beautiful quite rural site of the Bush Estate. Today I was inducted into how to recycle the office compost for use in the office orchard. I'm looking forward to "Apple Day".
+
+Only two of us have joined the team so far, most of the others not expected until June but this gives us a chance to bed in, organisationally - network with UKCEH research communities which have common needs, think through design options which are likely to be reusable and build towards a more ambitious future Digital Research Infrastructure.
+
+My colleague Matt has been working a literature review of Data Lakes, as well as looking at the functional metadata needs of environmental data catalog services; and I've been catching up on the different ways in which research groups are using pipelines, for data processing, model training and inference - it's a huge picture, and you have to start somewhere. 
+
+I like to start really small which is why I'm glad to have been offered some plankton to look at - finding small ways in which a research group with a promising prototype for a plankton classification service can move their work forward on a solid basis, while building a case for more funding. Slowly reading this paper on [Machine learning techniques to characterize functional traits of plankton from image data](https://aslopubs.onlinelibrary.wiley.com/doi/full/10.1002/lno.12101). It's similar to some of my recent work, but in a very different domain.
+
+A bit closer to home is the [Pangeo Forge](../infrastructure/pipelines/pangeo_forge.md) project. This is a really interesting, NSF-supported effort by Pangeo project contributors to create a lightweight framework that takes the heavy lifting out of converting image collections into "Analysis Ready, Cloud Optimised" data formats, so research developers can focus on the parts that need domain expertise (transformations and optimisations that specific kinds of analysis will need.
+
+We're also starting to socialise the concept of the [Carpentries workshops](../learning/carpentries.md) and work out how to build the right programme of instructor training and course delivery for researchers, data scientists and data managers here at UKCEH.
+
+That's my half an hour up! Hope this was alright for a first weeknote, it probably covers some of last week.
+
 
 
