--- a/weeknotes/10_05_2024.md
+++ b/weeknotes/10_05_2024.md
@@ -1,6 +1,6 @@
 # UKCEH RSE Group Weeknotes - 10-05-2024
 
-(Matt)This week saw the FDRI delivery phase kick-off meeting hosted in Wallingford. Many from the Lancaster office attended in person. Unfortunately, I was only able to attend online, so I will get an update on what happened in the afternoon session next week. The morning session brought together all those in UKCEH connected to FDRI (and many external partners) to give an overview of the next five years, what will be involved in the delivery, and a more general insight into the motivation behind FDRI and how the infrastructure will support science longer term. 
+(Matt)This week saw the [Floods and Droughts Research Infrastructure](https://www.ceh.ac.uk/our-science/projects/floods-and-droughts-research-infrastructure-fdri)(FDRI) delivery phase kick-off meeting hosted in Wallingford. Many from the Lancaster office attended in person. Unfortunately, I was only able to attend online, so I will get an update on what happened in the afternoon session next week. The morning session brought together all those in UKCEH connected to FDRI (and many external partners) to give an overview of the next five years, what will be involved in the delivery, and a more general insight into the motivation behind FDRI and how the infrastructure will support science longer term. 
 
 As part of getting to grips with FDRI, I have also spent part of this week continuing with my literature review around data lakes, how they are used in science projects, and what kind of technologies are employed. I have found most literature provides only a high level architectural grounding in specific systems that have been implemented (zone based architectural patterns are prominent). To suppliment this I have also begun investigating the use of open table formats like Apache Iceberg, as they may be the type of technology that we wish to deploy on the cloud for managing data in FDRI.
 
@@ -15,7 +15,7 @@ I think that is it for my weeknotes. I may need to get used to this sort of brai
 A bullet point update from Jo:
 
 * Visiting colleagues from BGS in Edinburgh doing RSE meets DevOps work in the Informatics team there and learning about their model of "software clinics"
-* Working out next steps for offering instructor training to everyone who would like it and identifying priorities and collaborators for a workshop programme https://github.com/NERC-CEH/rse_group/blob/main/learning/carpentries.md
-* Getting back into R, road testing one of the CEH external courses with the upgraded R version, and also had a lovely demo from Peter Levy of workflows in `{targets}` - repeatable pipelines to generate analyses embedded in RMarkdown publication documents - also available in this Github organisation https://github.com/NERC-CEH/targets_demo
+* Working out next steps for offering instructor training to everyone who would like it and identifying priorities and collaborators for a [workshop programme](https://github.com/NERC-CEH/rse_group/blob/main/learning/carpentries.md)
+* Getting back into R, road testing one of the CEH external courses with the upgraded R version, and also had a lovely demo from Peter Levy of workflows in `{targets}` - repeatable pipelines to generate analyses embedded in RMarkdown publication documents - [Targets demo project available here](https://github.com/NERC-CEH/targets_demo), a good topic for a one-hour software clinic session.
 
 
