add a para about meeting fellow RSE and adjacent in person

--- a/weeknotes/17_05_2024.md
+++ b/weeknotes/17_05_2024.md
@@ -10,5 +10,7 @@ As I'm at a different site from most colleagues in the EDS team it was also an o
 
 It was a packed couple of days of back-to-back meetings, next time we'll have to build in a bit more discretionary time, and plan to spend some of it looking through a microscope while researchers talk through how they interpret plankton.
 
+It was also the first time I've met Matt Coole and Gordon Blair in person. We shared a coffee with Faiza Samreen and talked through how we'd like a "lightweight, inclusive process" to prioritise how research groups can collaborate with RSEs to take shape in practise. 
+
 We'll be starting to welcome the rest of the team in the coming weeks, and I'm looking forward to our programme taking shape. The term "powerhouse" was used, expectations are high and the possibilities are rich...
 
